--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "counterapi": "^2.1.2",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
